# agent-replay

./: .gitignore  README.de.md  README.ja.md  README.md
goldens/: cross_language_basic.jsonl  generate_golden.py
python/: README.de.md  README.ja.md  README.md  pyproject.toml
python/src/agentreplay/: __init__.py  canonical.py  cassette.py  cli.py  diff.py  divergence.py  exceptions.py  fingerprint.py  normalization.py  paths.py  providers.py  pytest_plugin.py  redaction.py  transport.py
python/tests/: conftest.py  test_canonical_and_fingerprint.py  test_golden.py  test_paths_and_redaction.py  test_record_and_replay.py  test_sse.py
typescript/: .npmrc  LICENSE  README.de.md  README.ja.md  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: canonical.ts  cassette.ts  cli.ts  diff.ts  divergence.ts  errors.ts  fetch.ts  fingerprint.ts  index.ts  normalization.ts  paths.ts  providers.ts  redaction.ts  vitest.ts
typescript/tests/: canonical.test.ts  golden.test.ts  record-replay.test.ts
